tests/ui/higher-ranked/trait-bounds/hrtb-exists-forall-trait-invariant.stderr
error: implementation of `Trait` is not general enough
  --> $DIR/hrtb-exists-forall-trait-invariant.rs:28:5
   |
LL |     foo::<()>();
   |     ^^^^^^^^^^^ implementation of `Trait` is not general enough
   |
   = note: `()` must implement `Trait<for<'b> fn(Cell<&'b u32>)>`
   = note: ...but it actually implements `Trait<fn(Cell<&'0 u32>)>`, for some specific lifetime `'0`

error: aborting due to 1 previous error

